--- a/static/files/index.html
+++ b/static/files/index.html
@@ -27,7 +27,7 @@
 					ng-init="logoHover = false"
 					ng-mouseover="logoHover = true"
 					ng-mouseleave="logoHover = false">
-					<i class="blue icon" ng-class="{cloud:!logoHover, github: logoHover}"> chaddi baddi </i> 
+					<i class="blue icon" ng-class="{cloud:!logoHover, github: logoHover}">chaddi</i> 
 				</a>
 			</h2>
 			<div class="status">
